# Lattice-Boltzmann-Method-Raffaelli-Torti-Cioci

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.sh  lbm  notes.md  requirements.txt  run.sh  run_new.sh
data/: airfoil_01.txt  airfoil_02.txt  ball.txt  cavity.txt  empty-pbType-2.txt  lid-driven-cavity.txt  me.txt  moving_ball.txt  moving_ball_2.txt
docs/: in_example_lid.txt  notes.txt  out_example.txt
include/: Cell.hpp  GpuSimulation.cuh  Lattice.hpp  Structure.hpp  Utils.cpp
scripts/: airfoil.py  airfoil_generator.py  airfoil_profile.py  ball.py  dragLift.py  plotting2D.py  png_reader.py
src/: Cell.cpp  Cell.hpp  Fibo.cpp  GpuSimulation.cu  Lattice.cpp  Lattice.cu  Lattice.hpp  Main.cpp  NewFile.cpp  Structure.cpp  Structure.hpp  Utils.cpp  Utils.hpp  lbm.cpp  main.cpp
